@startuml
enum UserRoles {
    Normal,
    Premium,
    Admin,
}
class User {
    + UserId : Guid <<get>> <<set>>
    + Username : string <<get>> <<set>>
    + HashedPassword : string <<get>> <<set>>
    + UserRole : UserRoles <<get>> <<set>>
    + UserRoleRef : UserRole? <<get>> <<set>>
    + CreatedAt : DateTime <<get>> <<set>>
    + UpdatedAt : DateTime <<get>> <<set>>
}
class UserRole {
    + Role : UserRoles <<get>> <<set>>
}
User "0..*" -- "1" UserRole: "use"
ITimestampedEntity <|-- User
@enduml
